company info update

--- a/project/AADS/ko/aads-sim-01-terminal.html
+++ b/project/AADS/ko/aads-sim-01-terminal.html
@@ -130,7 +130,7 @@
             <!-- Bottom row for title -->
             <div class="text-center">
                 <h1 class="text-3xl sm:text-4xl font-bold text-white leading-tight">AADS: 자율형 AI 데이터 과학자</h1>
-                <p class="text-base sm:text-lg text-slate-400 leading-tight mt-1">CLI 기반 프로세스 시뮬레이션</p>
+                <p class="text-base sm:text-lg text-slate-400 leading-tight mt-1">CLI 기반 워크플로우 시뮬레이션: 데이터 품질 진단에서 개선까지</p>
             </div>
         </div>
     </header>
@@ -158,6 +158,8 @@
                         프로세스 실행
                     </button>
                 </div>
+
+               
             </div>
 
             <!-- Side Panel -->
@@ -176,7 +178,7 @@
                         <li class="flex items-center"><span class="text-sky-400 mr-2">&#10148;</span> 데이터 과학의 민주화</li>
                     </ul>
                 </div>
-                 <div class="card">
+                <div class="card">
                     <h2 class="text-xl font-semibold text-white mb-3">로드맵</h2>
                      <ul class="space-y-2 text-slate-400 text-sm">
                         <li><strong>2025년 4분기:</strong> 핵심 에이전트 루프 PoC 완료</li>
@@ -184,12 +186,75 @@
                         <li><strong>2026년 4분기:</strong> AADS 플랫폼 베타 출시</li>
                     </ul>
                 </div>
+                <div class="mt-8 pt-8 border-t border-slate-800 text-center text-xs text-slate-500 space-y-4">
+                    <p><strong>Acknowledgement:</strong> 이 웹페이지는 주관기관 (주)페블러스, 공동연구기관 KISTI 컨소시업이 과기정통부 ‘글로벌 빅테크 육성사업’ 사업으로 2025년부터 3년간 총사업비 61억원을 받아 수행하는 AADS (Agentic AI Data Scientist) 과제의 산출물 시뮬레이션을 담고 있습니다.</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <footer class="text-center text-xs text-slate-500 mt-12 mb-4 px-4 max-w-7xl mx-auto">
-        <p>이 웹페이지는 주관기관 (주)페블러스, 공동연구기관 KISTI 컨소시업이 과기정통부 ‘글로벌 빅테크 육성사업’ 사업으로 2025년부터 3년간 총사업비 61억원을 받아 수행하는 AADS (Agentic AI Data Scientist) 과제의 산출물 시뮬레이션을 담고 있습니다.</p>
+    <footer class="bg-slate-900 text-slate-400 mt-16">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 border-t border-slate-800">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8">
+                <div class="md:col-span-2">
+                    <h3 class="font-bold text-white mb-4">Product</h3>
+                    <ul class="space-y-3 text-sm">
+                        <li><a href="https://www.pebblous.ai/en/product" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Services & Products</a></li>
+                        <li><a href="https://dataclinic.ai/" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Clinic<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/data-synthesis" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Synthesis<sup>&trade;</sup></a></li>
+                        <li><a href="https://pebbloscope.ai/" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">PebbloScope<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/data-magazine" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Magazine<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/data-artlab" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Art Lab (DAL)<sup>&trade;</sup></a></li>
+                    </ul>
+                </div>
+                <div class="md:col-span-2">
+                    <h3 class="font-bold text-white mb-4">Company</h3>
+                    <ul class="space-y-3 text-sm">
+                        <li><a href="https://www.pebblous.ai/en/mission" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Mission</a></li>
+                        <li><a href="https://www.pebblous.ai/en/recognition" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Recognition Highlights</a></li>
+                        <li><a href="https://www.pebblous.ai/en/data-journey" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Data Journey</a></li>
+                        <li><a href="https://www.pebblous.ai/en/team" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Team</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Where Pebblous Can Be Found</a></li>
+                        <li><a href="https://www.pebblous.ai/en/traction" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Traction</a></li>
+                        <li><a href="https://www.pebblous.ai/en/news" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">News</a></li>
+                        <li><a href="https://www.pebblous.ai/en/award" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Award Winners!</a></li>
+                        <li><a href="https://www.pebblous.ai/en/patents" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Patents</a></li>
+                        <li><a href="https://www.pebblous.ai/en/customers" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Customers and Partners</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-bold text-white mb-4">Request</h3>
+                    <ul class="space-y-3 text-sm">
+                        <li><a href="https://www.pebblous.ai/en/contact" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="mt-12 pt-8 border-t border-slate-800">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+                    <div class="text-sm">
+                        <p class="font-bold text-white">PEBBLOUS Inc.</p>
+                        <p class="mt-2">+82-44-589-3824 | <a href="mailto:contact@pebblous.ai" class="hover:text-[#F86825] transition-colors">contact@pebblous.ai</a></p>
+                        <p class="mt-2">South Korea</p>
+                        <p>Sejong | Seoul | Daejeon | Pohang</p>
+                    </div>
+                    <div class="flex items-center justify-center md:justify-end space-x-6">
+                        <a href="https://www.facebook.com/Pebblous" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-white transition-colors">
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"></path></svg>
+                        </a>
+                        <a href="https://www.linkedin.com/company/pebblous/" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-white transition-colors">
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg>
+                        </a>
+                        <a href="https://www.instagram.com/pebblous/" target="_blank" rel="noopener noreferrer" class="text-slate-400 hover:text-white transition-colors">
+                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.585-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.85-.07-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.585.069-4.85c.149-3.225 1.664-4.771 4.919 4.919 1.266-.057 1.645-.069 4.85-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.948-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44 1.441-.645 1.441-1.44-.645-1.44-1.441-1.44z"></path></svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="mt-8 pt-8 text-center text-xs">
+                    <p>Copyright © Pebblous.ai All rights reserved</p>
+                </div>
+            </div>
+        </div>
+
     </footer>
 
     <script>
