--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -317,38 +317,53 @@
          <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-16 border-t border-gray-200">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8">
                 
-                <div class="md:col-span-2">
+                <div class="md:col-span-1">
                     <h3 class="font-bold text-stone-800 mb-4">Product</h3>
                     <ul class="space-y-3 text-sm">
-                        <li><a href="https://www.pebblous.ai/en/product" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Services & Products</a></li>
+                        <!--
+                        https://www.pebblous.ai/en/product/services-products
+                        -->
+                        <li><a href="https://www.pebblous.ai/en/product/services-products" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Services & Products</a></li>
                         <li><a href="https://dataclinic.ai/" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Clinic<sup>&trade;</sup></a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-synthesis" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Synthesis<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/product/data-synthesis" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Synthesis<sup>&trade;</sup></a></li>
                         <li><a href="https://pebbloscope.ai/" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">PebbloScope<sup>&trade;</sup></a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-magazine" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Magazine<sup>&trade;</sup></a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-artlab" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Art Lab (DAL)<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/product/data-magazine" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Magazine<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/product/data-artlab" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Art Lab (DAL)<sup>&trade;</sup></a></li>
                     </ul>
                 </div>
     
-                <div class="md:col-span-2">
+                <div class="md:col-span-1">
                     <h3 class="font-bold text-stone-800 mb-4">Company</h3>
                     <ul class="space-y-3 text-sm">
-                        <li><a href="https://www.pebblous.ai/en/mission" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Mission</a></li>
-                        <li><a href="https://www.pebblous.ai/en/recognition" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Recognition Highlights</a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-journey" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Data Journey</a></li>
-                        <li><a href="https://www.pebblous.ai/en/team" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Team</a></li>
-                        <li><a href="https://www.pebblous.ai/en/company" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Where Pebblous Can Be Found</a></li>
-                        <li><a href="https://www.pebblous.ai/en/traction" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Traction</a></li>
-                        <li><a href="https://www.pebblous.ai/en/news" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">News</a></li>
-                        <li><a href="https://www.pebblous.ai/en/award" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Award Winners!</a></li>
-                        <li><a href="https://www.pebblous.ai/en/patents" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Patents</a></li>
-                        <li><a href="https://www.pebblous.ai/en/customers" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Customers and Partners</a></li>
+                        <!--
+                        https://www.pebblous.ai/en/company#experience
+                        https://www.pebblous.ai/en/company#locations
+                        -->
+                        <li><a href="https://www.pebblous.ai/en/company" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Mission</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#experience" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Recognition Highlights</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#journey" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Data Journey</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#team" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Team</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#locations" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Spots</a></li>
+                    </ul>
+                </div>
+                <div class="md:col-span-1">
+                    <h3 class="font-bold text-stone-800 mb-4">Traction</h3>
+                    <ul class="space-y-3 text-sm">
+                        <!--
+                        https://www.pebblous.ai/en/traction?id=award
+                        -->
+                        <li><a href="https://www.pebblous.ai/en/traction" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">News</a></li>
+                        <li><a href="https://www.pebblous.ai/en/traction?id=award" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Award Winners!</a></li>
+                        <li><a href="https://www.pebblous.ai/en/traction?id=pebblous" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Patents</a></li>
+                        <li><a href="https://www.pebblous.ai/en/traction?id=customer" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Customers and Partners</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h3 class="font-bold text-stone-800 mb-4">Request</h3>
                     <ul class="space-y-3 text-sm">
-                       <li><a href="https://www.pebblous.ai/en/contact" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Contact</a></li>
+                        <li><a href="mailto:contact@pebblous.ai" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Email</a></li>
+                        <li><a href="https://www.pebblous.ai/en/request" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Service Request</a></li>
                     </ul>
                 </div>
             </div>
