--- a/project/AADS/ko/aads-sim-01-terminal.html
+++ b/project/AADS/ko/aads-sim-01-terminal.html
@@ -46,6 +46,9 @@
             font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
             background-color: #020617; /* slate-950 */
             color: #94a3b8; /* slate-400 */
+            letter-spacing: -0.025em;
+            word-break: keep-all;
+            text-rendering: optimizeLegibility;
         }
         .terminal {
             font-family: 'Roboto Mono', monospace;
@@ -118,7 +121,7 @@
         }
     </style>
 </head>
-<body class="min-h-screen">
+<body class="min-h-screen flex flex-col">
     <header class="sticky top-0 z-20 py-3 backdrop-blur-lg bg-slate-950/80 border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Top row for logo -->
@@ -129,106 +132,109 @@
             </div>
             <!-- Bottom row for title -->
             <div class="text-center">
-                <h1 class="text-3xl sm:text-4xl font-bold text-white leading-tight">AADS: 자율형 AI 데이터 과학자</h1>
-                <p class="text-base sm:text-lg text-slate-400 leading-tight mt-1">CLI 기반 워크플로우 시뮬레이션: 데이터 품질 진단에서 개선까지</p>
+                <h1 class="text-3xl sm:text-4xl font-extrabold text-white leading-tight tracking-tight">AADS: 자율형 AI 데이터 과학자</h1>
+                <p class="text-base sm:text-lg text-slate-300 leading-tight mt-1">CLI 기반 워크플로우 시뮬레이션: 데이터 품질 진단에서 개선까지</p>
             </div>
         </div>
     </header>
 
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-            <!-- Main Visualization -->
-            <div class="lg:col-span-2">
-                <div id="terminal" class="terminal">
-                    <div class="terminal-header">
-                        <div class="terminal-dot" style="background-color: #ef4444;"></div>
-                        <div class="terminal-dot" style="background-color: #f59e0b;"></div>
-                        <div class="terminal-dot" style="background-color: #22c55e;"></div>
-                        <span class="ml-auto text-xs text-slate-500">/bin/aads_process</span>
+    <main class="flex-grow">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+                <!-- Main Visualization -->
+                <div class="lg:col-span-2">
+                    <div id="terminal" class="terminal">
+                        <div class="terminal-header">
+                            <div class="terminal-dot" style="background-color: #ef4444;"></div>
+                            <div class="terminal-dot" style="background-color: #f59e0b;"></div>
+                            <div class="terminal-dot" style="background-color: #22c55e;"></div>
+                            <span class="ml-auto text-xs text-slate-500">/bin/aads_process</span>
+                        </div>
+                        <div id="terminal-content" class="space-y-2">
+                            <!-- Dynamic content goes here -->
+                        </div>
+                         <div id="prompt-container" class="prompt mt-4 flex items-center">
+                            <span id="typed-text"></span><span class="cursor"></span>
+                        </div>
                     </div>
-                    <div id="terminal-content" class="space-y-2">
-                        <!-- Dynamic content goes here -->
+                    <div class="text-center mt-4">
+                        <button id="run-btn" class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-6 rounded-md transition-all transform hover:scale-105 shadow-lg">
+                            프로세스 실행
+                        </button>
                     </div>
-                     <div id="prompt-container" class="prompt mt-4 flex items-center">
-                        <span id="typed-text"></span><span class="cursor"></span>
-                    </div>
-                </div>
-                <div class="text-center mt-4">
-                    <button id="run-btn" class="bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-6 rounded-md transition-all transform hover:scale-105 shadow-lg">
-                        프로세스 실행
-                    </button>
                 </div>
 
-               
-            </div>
-
-            <!-- Side Panel -->
-            <div class="space-y-8">
-                <div class="card">
-                    <h2 class="text-xl font-semibold text-white mb-3">문제점</h2>
-                    <p class="text-slate-400 text-sm">
-                        기업들은 "데이터 부채"에 허덕이고 있으며, 데이터 과학자들은 업무 시간의 80%를 수동적인 데이터 준비 작업에 소요하고 있습니다. 동시에 "규제 쓰나미"에 직면하여 비효율적이고 사후 대응적인 기존 툴의 한계가 드러나고 있습니다.
-                    </p>
-                </div>
-                 <div class="card">
-                    <h2 class="text-xl font-semibold text-white mb-3">전략적 기대효과</h2>
-                    <ul class="space-y-2 text-slate-400 text-sm">
-                        <li class="flex items-center"><span class="text-sky-400 mr-2">&#10148;</span> AI 도입 가속화</li>
-                        <li class="flex items-center"><span class="text-sky-400 mr-2">&#10148;</span> 선제적 거버넌스 및 리스크 관리</li>
-                        <li class="flex items-center"><span class="text-sky-400 mr-2">&#10148;</span> 데이터 과학의 민주화</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <h2 class="text-xl font-semibold text-white mb-3">로드맵</h2>
-                     <ul class="space-y-2 text-slate-400 text-sm">
-                        <li><strong>2025년 4분기:</strong> 핵심 에이전트 루프 PoC 완료</li>
-                        <li><strong>2026년 2분기:</strong> 주요 산업 파트너와 파일럿 프로그램 착수</li>
-                        <li><strong>2026년 4분기:</strong> AADS 플랫폼 베타 출시</li>
-                    </ul>
-                </div>
-                <div class="mt-8 pt-8 border-t border-slate-800 text-center text-xs text-slate-500 space-y-4">
-                    <p><strong>Acknowledgement:</strong> 이 웹페이지는 주관기관 (주)페블러스, 공동연구기관 KISTI 컨소시업이 과기정통부 ‘글로벌 빅테크 육성사업’ 사업으로 2025년부터 3년간 총사업비 61억원을 받아 수행하는 AADS (Agentic AI Data Scientist) 과제의 산출물 시뮬레이션을 담고 있습니다.</p>
+                <!-- Side Panel -->
+                <div class="space-y-8">
+                    <div class="card">
+                        <h2 class="text-xl font-bold text-white mb-3">문제점</h2>
+                        <p class="text-slate-400 text-sm leading-relaxed">
+                            기업들은 "데이터 부채"에 허덕이고 있으며, 데이터 과학자들은 업무 시간의 80%를 수동적인 데이터 준비 작업에 소요하고 있습니다. 동시에 "규제 쓰나미"에 직면하여 비효율적이고 사후 대응적인 기존 툴의 한계가 드러나고 있습니다.
+                        </p>
+                    </div>
+                     <div class="card">
+                        <h2 class="text-xl font-bold text-white mb-3">전략적 기대효과</h2>
+                        <ul class="space-y-2 text-slate-400 text-sm">
+                            <li class="flex items-center"><span class="text-sky-400 mr-2">&#10148;</span> AI 도입 가속화</li>
+                            <li class="flex items-center"><span class="text-sky-400 mr-2">&#10148;</span> 선제적 거버넌스 및 리스크 관리</li>
+                            <li class="flex items-center"><span class="text-sky-400 mr-2">&#10148;</span> 데이터 과학의 민주화</li>
+                        </ul>
+                    </div>
+                     <div class="card">
+                        <h2 class="text-xl font-bold text-white mb-3">로드맵</h2>
+                         <ul class="space-y-2 text-slate-400 text-sm">
+                            <li><strong>2025년 4분기:</strong> 핵심 에이전트 루프 PoC 완료</li>
+                            <li><strong>2026년 2분기:</strong> 주요 산업 파트너와 파일럿 프로그램 착수</li>
+                            <li><strong>2026년 4분기:</strong> AADS 플랫폼 베타 출시</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
-    <footer class="bg-slate-900 text-slate-400 mt-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 border-t border-slate-800">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8">
-                <div class="md:col-span-2">
-                    <h3 class="font-bold text-white mb-4">Product</h3>
+    <footer class="bg-slate-950 text-slate-400">
+         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 border-t border-slate-800">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                <div>
+                    <h3 class="font-semibold text-slate-300 mb-4">Product</h3>
                     <ul class="space-y-3 text-sm">
-                        <li><a href="https://www.pebblous.ai/en/product" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Services & Products</a></li>
+                        <li><a href="https://www.pebblous.ai/en/product/services-products" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Services & Products</a></li>
                         <li><a href="https://dataclinic.ai/" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Clinic<sup>&trade;</sup></a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-synthesis" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Synthesis<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/product/data-synthesis" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Synthesis<sup>&trade;</sup></a></li>
                         <li><a href="https://pebbloscope.ai/" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">PebbloScope<sup>&trade;</sup></a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-magazine" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Magazine<sup>&trade;</sup></a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-artlab" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Art Lab (DAL)<sup>&trade;</sup></a></li>
-                    </ul>
-                </div>
-                <div class="md:col-span-2">
-                    <h3 class="font-bold text-white mb-4">Company</h3>
-                    <ul class="space-y-3 text-sm">
-                        <li><a href="https://www.pebblous.ai/en/mission" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Mission</a></li>
-                        <li><a href="https://www.pebblous.ai/en/recognition" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Recognition Highlights</a></li>
-                        <li><a href="https://www.pebblous.ai/en/data-journey" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Data Journey</a></li>
-                        <li><a href="https://www.pebblous.ai/en/team" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Team</a></li>
-                        <li><a href="https://www.pebblous.ai/en/company" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Where Pebblous Can Be Found</a></li>
-                        <li><a href="https://www.pebblous.ai/en/traction" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Traction</a></li>
-                        <li><a href="https://www.pebblous.ai/en/news" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">News</a></li>
-                        <li><a href="https://www.pebblous.ai/en/award" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Award Winners!</a></li>
-                        <li><a href="https://www.pebblous.ai/en/patents" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Patents</a></li>
-                        <li><a href="https://www.pebblous.ai/en/customers" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Customers and Partners</a></li>
+                        <li><a href="https://www.pebblous.ai/en/product/data-magazine" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Magazine<sup>&trade;</sup></a></li>
+                        <li><a href="https://www.pebblous.ai/en/product/data-artlab" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Data Art Lab (DAL)<sup>&trade;</sup></a></li>
                     </ul>
                 </div>
                 <div>
-                    <h3 class="font-bold text-white mb-4">Request</h3>
+                    <h3 class="font-semibold text-slate-300 mb-4">Company</h3>
                     <ul class="space-y-3 text-sm">
-                        <li><a href="https://www.pebblous.ai/en/contact" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Contact</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Mission</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#experience" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Recognition Highlights</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#journey" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Data Journey</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#team" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Team</a></li>
+                        <li><a href="https://www.pebblous.ai/en/company#locations" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Spots</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-slate-300 mb-4">Traction</h3>
+                    <ul class="space-y-3 text-sm">
+                        <li><a href="https://www.pebblous.ai/en/traction" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">News</a></li>
+                        <li><a href="https://www.pebblous.ai/en/traction?id=award" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Award Winners!</a></li>
+                        <li><a href="https://www.pebblous.ai/en/traction?id=pebblous" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Pebblous Patents</a></li>
+                        <li><a href="https://www.pebblous.ai/en/traction?id=customer" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Customers and Partners</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-slate-300 mb-4">Request</h3>
+                    <ul class="space-y-3 text-sm">
+                        <li><a href="mailto:contact@pebblous.ai" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Email</a></li>
+                        <li><a href="https://www.pebblous.ai/en/request" target="_blank" rel="noopener noreferrer" class="hover:text-[#F86825] transition-colors">Service Request</a></li>
                     </ul>
                 </div>
             </div>
+
             <div class="mt-12 pt-8 border-t border-slate-800">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                     <div class="text-sm">
@@ -249,12 +255,12 @@
                         </a>
                     </div>
                 </div>
-                <div class="mt-8 pt-8 text-center text-xs">
+                <div class="mt-8 pt-8 border-t border-slate-800 text-center text-xs text-slate-500 space-y-4">
+                    <p><strong>Acknowledgement:</strong> 이 웹페이지는 주관기관 (주)페블러스, 공동연구기관 KISTI 컨소시업이 과기정통부 ‘글로벌 빅테크 육성사업’ 사업으로 2025년부터 3년간 총사업비 61억원을 받아 수행하는 AADS (Agentic AI Data Scientist) 과제의 산출물 시뮬레이션을 담고 있습니다.</p>
                     <p>Copyright © Pebblous.ai All rights reserved</p>
                 </div>
             </div>
         </div>
-
     </footer>
 
     <script>
