--- a/project/AADS/ko/index.html
+++ b/project/AADS/ko/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-57L9F58B');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- SEO & SNS Meta Tags -->
     <title>AADS: 자율형 AI 데이터 과학자 - CLI 시뮬레이션 | Pebblous</title>
     <meta name="description" content="(주)페블러스가 과기부 글로벌빅테크 프로젝트의 지원을 받아 개발하고 있는 자율형 AI 데이터 과학자, AADS의 프로세스 시뮬레이션을 경험해보세요. 데이터셋의 편향성을 개선하고 개인정보보호 규정을 준수하는 과정을 인터랙티브 CLI에서 직접 확인하실 수 있습니다.">
@@ -122,6 +130,11 @@
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-57L9F58B"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <header class="sticky top-0 z-20 py-3 backdrop-blur-lg bg-slate-950/80 border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Top row for logo -->
