--- a/report/llm-dataset-guide-2025-10-16/ko/index.html
+++ b/report/llm-dataset-guide-2025-10-16/ko/index.html
@@ -22,6 +22,8 @@
     <meta id="og-title" property="og:title" content="">
     <meta id="og-description" property="og:description" content="">
     <meta id="og-image" property="og:image" content="">
+    <meta id="og-image-width" property="og:image:width" content="">
+    <meta id="og-image-height" property="og:image:height" content="">
     <meta property="og:type" content="website">
 
     <meta id="twitter-url" property="twitter:url" content="">
@@ -580,6 +582,8 @@
                 document.getElementById('og-title').setAttribute('content', fullTitle);
                 document.getElementById('og-description').setAttribute('content', config.seoDescription);
                 document.getElementById('og-image').setAttribute('content', socialImage);
+                document.getElementById('og-image-width').setAttribute('content', 1200);
+                document.getElementById('og-image-height').setAttribute('content', 630);
                 document.getElementById('twitter-url').setAttribute('content', fullURL);
                 document.getElementById('twitter-title').setAttribute('content', fullTitle);
                 document.getElementById('twitter-description').setAttribute('content', config.seoDescription);
